feat: add text utilities module with Indonesian language support
- 14 text processing utilities (capitalize, slugify, abbreviation, etc)
- 1060+ test cases with full documentation
- Updated package configuration and docs"

--- a/docs/src/content/changelog.mdx
+++ b/docs/src/content/changelog.mdx
@@ -1,17 +1,34 @@
-# Changelog
+---
+title: Changelog
+description: Latest updates and changes to the @indodev/toolkit library.
+---
 
-All notable changes to this project will be documented in this file.
+## v0.2.0 - January 2, 2026
 
-The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
-and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
+### New Features
 
-## [Unreleased]
+#### Text Module
 
-## [0.1.0] - 2025-12-11
+- `toTitleCase()` - Smart capitalization handling Indonesian particles
+- `expandAbbreviation()` - Expand common Indonesian abbreviations (Jl., Bpk., etc.)
+- `slugify()` - URL-friendly slugs with Indonesian conjunction support (& -> dan)
+- `truncate()` - Smart text truncation respecting word boundaries
+- `compareStrings()` - Robust string comparison (case/accent/whitespace)
+- `similarity()` - Calculate string similarity scores (Levenshtein)
+- `extractWords()` - Word extraction preserving hyphenated words
+- `sanitize()` - Text cleaning and normalization
 
-### Added
+#### Improvements
+
+- Performance optimizations for text processing
+- Comprehensive test coverage for text utilities
+
+## v0.1.0 - December 11, 2025
+
+### New Features
 
 #### NIK Module
+
 - `validateNIK()` - Validate Indonesian National Identity Number
 - `parseNIK()` - Extract province, birth date, and gender information
 - `formatNIK()` - Format NIK with separators
@@ -21,6 +38,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Gender detection from birth date encoding
 
 #### Phone Module
+
 - `validatePhoneNumber()` - Validate Indonesian phone numbers
 - `formatPhoneNumber()` - Format to international/national/e164 formats
 - `getOperator()` - Detect mobile operator (Telkomsel, XL, Indosat, Smartfren, Axis)
@@ -31,6 +49,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Support for landline and mobile numbers
 
 #### Currency Module
+
 - `formatRupiah()` - Format numbers as Rupiah currency
 - `formatCompact()` - Compact format with proper Indonesian grammar (1,5 juta)
 - `parseRupiah()` - Parse formatted strings back to numbers
@@ -39,11 +58,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Support for decimal places and custom separators
 
 #### Package
+
 - TypeScript support with full type definitions
 - Dual package support (ESM + CommonJS)
 - Tree-shakeable exports
 - Zero runtime dependencies
 - 175+ test cases with 95%+ coverage
-
-[Unreleased]: https://github.com/choiruladamm/indo-dev-utils/compare/v0.1.0...HEAD
-[0.1.0]: https://github.com/choiruladamm/indo-dev-utils/releases/tag/v0.1.0
